; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/openbsd/remote/extr_20733.c_communicate.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/openbsd/remote/extr_20733.c_communicate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STDIN_FILENO = common dso_local global i32 0, align 4
@STDOUT_FILENO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @communicate(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [1024 x i8], align 16
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  br label %6

6:                                                ; preds = %1, %50
  %7 = call i32 @FD_ZERO(i32* %5)
  %8 = load i32, i32* @STDIN_FILENO, align 4
  %9 = call i32 @FD_SET(i32 %8, i32* %5)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @FD_SET(i32 %10, i32* %5)
  %12 = load i32, i32* %2, align 4
  %13 = add nsw i32 %12, 1
  %14 = call i32 @select(i32 %13, i32* %5, i32* null, i32* null, i32* null)
  %15 = load i32, i32* @STDIN_FILENO, align 4
  %16 = call i64 @FD_ISSET(i32 %15, i32* %5)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %32

18:                                               ; preds = %6
  %19 = load i32, i32* @STDIN_FILENO, align 4
  %20 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %21 = call i32 @read(i32 %19, i8* %20, i32 1024)
  store i32 %21, i32* %4, align 4
  %22 = icmp sle i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %18
  br label %51

24:                                               ; preds = %18
  %25 = load i32, i32* %2, align 4
  %26 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @send(i32 %25, i8* %26, i32 %27, i32 0)
  %29 = icmp eq i32 %28, -1
  br i1 %29, label %30, label %31

30:                                               ; preds = %24
  br label %51

31:                                               ; preds = %24
  br label %32

32:                                               ; preds = %31, %6
  %33 = load i32, i32* %2, align 4
  %34 = call i64 @FD_ISSET(i32 %33, i32* %5)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %50

36:                                               ; preds = %32
  %37 = load i32, i32* %2, align 4
  %38 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %39 = call i32 @recv(i32 %37, i8* %38, i32 1024, i32 0)
  store i32 %39, i32* %4, align 4
  %40 = icmp sle i32 %39, 0
  br i1 %40, label %41, label %42

41:                                               ; preds = %36
  br label %51

42:                                               ; preds = %36
  %43 = load i32, i32* @STDOUT_FILENO, align 4
  %44 = getelementptr inbounds [1024 x i8], [1024 x i8]* %3, i64 0, i64 0
  %45 = load i32, i32* %4, align 4
  %46 = call i32 @write(i32 %43, i8* %44, i32 %45)
  %47 = icmp eq i32 %46, -1
  br i1 %47, label %48, label %49

48:                                               ; preds = %42
  br label %51

49:                                               ; preds = %42
  br label %50

50:                                               ; preds = %49, %32
  br label %6

51:                                               ; preds = %48, %41, %30, %23
  ret void
}

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, i32*) #1

declare dso_local i64 @FD_ISSET(i32, i32*) #1

declare dso_local i32 @read(i32, i8*, i32) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @recv(i32, i8*, i32, i32) #1

declare dso_local i32 @write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
